@@ -4136,12 +4136,13 @@ GEN     lfun_get_expot(GEN tech);
 long    lfun_get_bitprec(GEN tech);
 GEN     lfun(GEN ldata, GEN s, long bitprec);
 GEN     lfun0(GEN ldata, GEN s, long der, long bitprec);
+GEN     lfunan(GEN ldata, long L, long prec);
 long    lfuncheckfeq(GEN data, GEN t0, long bitprec);
 GEN     lfunconductor(GEN data, GEN maxcond, long flag, long bitprec);
 GEN     lfuncost(GEN lmisc, GEN dom, long der, long bitprec);
 GEN     lfuncost0(GEN L, GEN dom, long der, long bitprec);
 GEN     lfuncreate(GEN obj);
-GEN     lfunan(GEN ldata, long L, long prec);
+GEN     lfundual(GEN L, long bitprec);
 GEN     lfunhardy(GEN ldata, GEN t, long bitprec);
 GEN     lfuninit(GEN ldata, GEN dom, long der, long bitprec);
 GEN     lfuninit0(GEN ldata, GEN dom, long der, long bitprec);
