@@ -6,6 +6,7 @@
 1 (lfunlambda): 0.52359877559829887307710723054658381403
 1 (lfunderivlambda): 1.7505408751756119544313430121943867084
 1 (lfuncheckfeq): -125
+1 (lfuncheckfeq(lfundual)): -125
 1 (lfunhardy): -0.96200848724404057880841099553380466848
 1 (lfunorderzero): 0
 1 (lfuntheta): 6.9746847124179912793574557227733860848 E-6
@@ -18,6 +19,7 @@
 2 (lfunlambda): 307.34947482475061378201159711485734531
 2 (lfunderivlambda): 2028.4436121153168471302904406930171615
 2 (lfuncheckfeq): -124
+2 (lfuncheckfeq(lfundual)): -124
 2 (lfunhardy): -32.018714245905908906772024097979947352
 2 (lfunorderzero): 0
 2 (lfuntheta): 0.64488044392253325202054921399500268290
@@ -30,6 +32,7 @@
 3 (lfunlambda): 0.52359877559829887307710723054658381403
 3 (lfunderivlambda): 1.7505408751756119544313430121943867084
 3 (lfuncheckfeq): -125
+3 (lfuncheckfeq(lfundual)): -125
 3 (lfunhardy): -0.96200848724404057880841099553380466848
 3 (lfunorderzero): 0
 3 (lfuntheta): 6.9746847124179912793574557227733860848 E-6
@@ -42,6 +45,7 @@
 4 (lfunlambda): 0.52359877559829887307710723054658381403
 4 (lfunderivlambda): 1.7505408751756119544313430121943867084
 4 (lfuncheckfeq): -125
+4 (lfuncheckfeq(lfundual)): -125
 4 (lfunhardy): -0.96200848724404057880841099553380466848
 4 (lfunorderzero): 0
 4 (lfuntheta): 6.9746847124179912793574557227733860848 E-6
@@ -54,6 +58,7 @@
 5 (lfunlambda): 0.41169121016707136240079852448689476625
 5 (lfunderivlambda): 1.0217697192872996687480118838767986988
 5 (lfuncheckfeq): -125
+5 (lfuncheckfeq(lfundual)): -126
 5 (lfunhardy): -3.6466012956392990113851960814374302626
 5 (lfunorderzero): 0
 5 (lfuntheta): 0.015798831739815398531916606977185172991
@@ -66,6 +71,7 @@
 6 (lfunlambda): 15.139485785201416763757736219721592777
 6 (lfunderivlambda): 33.440587260542738156400195687111808794
 6 (lfuncheckfeq): -125
+6 (lfuncheckfeq(lfundual)): -126
 6 (lfunhardy): -4.0882933850254632425733862599048558633
 6 (lfunorderzero): 0
 6 (lfuntheta): 1.1375713725509771962438425200438560306
@@ -78,6 +84,7 @@
 7 (lfunlambda): 5.5505341159944627753280928032151833524
 7 (lfunderivlambda): 16.424727310701215600165088962170900302
 7 (lfuncheckfeq): -125
+7 (lfuncheckfeq(lfundual)): -126
 7 (lfunhardy): -33.351091907649273629818419728456878713
 7 (lfunorderzero): 0
 7 (lfuntheta): 0.36149966339864669981432842318357647719
@@ -90,6 +97,7 @@
 8 (lfunlambda): 49.048985289902361654934745411419681479
 8 (lfunderivlambda): 122.70316145654544382956158595378438704
 8 (lfuncheckfeq): -125
+8 (lfuncheckfeq(lfundual)): -117
 8 (lfunhardy): -416.09983196508983799680981895045379214
 8 (lfunorderzero): 0
 8 (lfuntheta): 3.4408766070486585094477767051533947306
@@ -102,6 +110,7 @@
 9 (lfunlambda): 0.41169121016707136240079852448689476625
 9 (lfunderivlambda): 1.0217697192872996687480118838767986988
 9 (lfuncheckfeq): -125
+9 (lfuncheckfeq(lfundual)): -126
 9 (lfunhardy): -3.6466012956392990113851960814374302626
 9 (lfunorderzero): 0
 9 (lfuntheta): 0.015798831739815398531916606977185172991
@@ -114,6 +123,7 @@
 10 (lfunlambda): 15.139485785201416763757736219721592777
 10 (lfunderivlambda): 33.440587260542738156400195687111808794
 10 (lfuncheckfeq): -125
+10 (lfuncheckfeq(lfundual)): -126
 10 (lfunhardy): -4.0882933850254632425733862599048558633
 10 (lfunorderzero): 0
 10 (lfuntheta): 1.1375713725509771962438425200438560306
@@ -126,6 +136,7 @@
 11 (lfunlambda): 49.048985289902361654934745411419681479
 11 (lfunderivlambda): 122.70316145654544382956158595378438704
 11 (lfuncheckfeq): -125
+11 (lfuncheckfeq(lfundual)): -117
 11 (lfunhardy): -416.09983196508983799680981895045379214
 11 (lfunorderzero): 0
 11 (lfuntheta): 3.4408766070486585094477767051533947306
@@ -138,6 +149,7 @@
 12 (lfunlambda): 6.0955851027836191952110423376698748409
 12 (lfunderivlambda): 3.7433308797907653080501083741412594803
 12 (lfuncheckfeq): -127
+12 (lfuncheckfeq(lfundual)): -127
 12 (lfunhardy): 7.7257057464347992184653892456526767355
 12 (lfunorderzero): 0
 12 (lfuntheta): 1.0563976349426781093403848049102677979
@@ -150,6 +162,7 @@
 13 (lfunlambda): 0.58312180806163756027676891293678983773
 13 (lfunderivlambda): 0.11461361270605074146108788204186899939
 13 (lfuncheckfeq): -127
+13 (lfuncheckfeq(lfundual)): -127
 13 (lfunhardy): 1.1188781062286078283093507637195622642
 13 (lfunorderzero): 0
 13 (lfuntheta): 0.086427836524391208443231605210323282841
@@ -162,6 +175,7 @@
 14 (lfunlambda): 307.34947482475061378201159711485734531
 14 (lfunderivlambda): 2028.4436121153168471302904406930171615
 14 (lfuncheckfeq): -124
+14 (lfuncheckfeq(lfundual)): -124
 14 (lfunhardy): -32.018714245905908906772024097979947352
 14 (lfunorderzero): 0
 14 (lfuntheta): 0.64488044392253325202054921399500268290
@@ -179,6 +193,7 @@
 15 (lfunderivlambda): 0.19928889238023943688189401030203636553 + 0.014134398
 189618376193588831806358170666*I
 15 (lfuncheckfeq): -126
+15 (lfuncheckfeq(lfundual)): -127
 15 (lfunhardy): 1.5591777703301761172588208954327252551
 15 (lfunorderzero): 0
 15 (lfuntheta): 0.14490184193508174938690941658301401010 + 0.000154027540511
@@ -192,6 +207,7 @@
 16 (lfunlambda): 0.30429428345183609897245459495726899126
 16 (lfunderivlambda): 0.095266257729556417098633725894681176014
 16 (lfuncheckfeq): -127
+16 (lfuncheckfeq(lfundual)): -127
 16 (lfunhardy): 0.97613504532230008589418374710889823825
 16 (lfunorderzero): 0
 16 (lfuntheta): 0.043171973528082749943827357182478083529
@@ -204,6 +220,7 @@
 17 (lfunlambda): 21.462810165028656830342316601064230458
 17 (lfunderivlambda): 84.686002725623067381430447870497647113
 17 (lfuncheckfeq): -124
+17 (lfuncheckfeq(lfundual)): -124
 17 (lfunhardy): 7.7431197030007111287831790642229368607
 17 (lfunorderzero): 1
 17 (lfuntheta): 0.84521747322794073828148208807828496968
@@ -216,6 +233,7 @@
 18 (lfunlambda): 378.67068685244416028912739442353179344
 18 (lfunderivlambda): 4720.9665435827617633763166279999891270
 18 (lfuncheckfeq): -127
+18 (lfuncheckfeq(lfundual)): -127
 18 (lfunhardy): -15.149647103802510158707354941231055482
 18 (lfunorderzero): 2
 18 (lfuntheta): -7.6688743804622365519219315981408517165
@@ -228,6 +246,7 @@
 19 (lfunlambda): 0.50266086742650446274974513333867258927
 19 (lfunderivlambda): 0.19442331022115954163350803417532382469
 19 (lfuncheckfeq): -127
+19 (lfuncheckfeq(lfundual)): -127
 19 (lfunhardy): 1.4076935244557198875463930525207828840
 19 (lfunorderzero): 0
 19 (lfuntheta): 0.074804214825265387726031644781601219253
@@ -240,6 +259,7 @@
 20 (lfunlambda): 0.21753033853570730528434199705036653995
 20 (lfunderivlambda): 0.089237881186363955097754401634415704592
 20 (lfuncheckfeq): -128
+20 (lfuncheckfeq(lfundual)): -128
 20 (lfunhardy): 0.91836381109207465259393909159615943678
 20 (lfunorderzero): 0
 20 (lfuntheta): 0.037630673702661307416849865951733658142
@@ -252,6 +272,7 @@
 21 (lfunlambda): 0.78627229350688518181479057787879442122
 21 (lfunderivlambda): 0.43960077502814326043064320757682369479
 21 (lfuncheckfeq): -127
+21 (lfuncheckfeq(lfundual)): -127
 21 (lfunhardy): 3.7906123947888162118912745573290423840
 21 (lfunorderzero): 0
 21 (lfuntheta): 0.13420087505683188828132600694374189569
@@ -264,6 +285,7 @@
 22 (lfunlambda): 1.1759743869874435481612945489432475212
 22 (lfunderivlambda): 2.4084264843810884136659888848787984212
 22 (lfuncheckfeq): -125
+22 (lfuncheckfeq(lfundual)): -126
 22 (lfunhardy): -7.5183989759241169055381813793310826092
 22 (lfunorderzero): 0
 22 (lfuntheta): 0.082926332933319155259202716459188391631
@@ -276,6 +298,7 @@
 23 (lfunlambda): 22.150738128072135257046224387043103356
 23 (lfunderivlambda): 67.856243754653225347348872059210166995
 23 (lfuncheckfeq): -129
+23 (lfuncheckfeq(lfundual)): -129
 23 (lfunhardy): 34.264753605661655413113407773581100347
 23 (lfunorderzero): 0
 23 (lfuntheta): 1.4615812546350410806241912565112410208
@@ -288,6 +311,7 @@
 24 (lfunlambda): -1.0000000000000000000000000000000000000*x^-1 + O(x^0)
 24 (lfunderivlambda): -2.0000000000000000000000000000000000000*x^-3 + O(x^0)
 24 (lfuncheckfeq): -126
+24 (lfuncheckfeq(lfundual)): -126
   *** lfunhardy: Warning: lfuninit: insufficient initialization.
 24 (lfunhardy): -0.56003058147354490789526675361134629435
   *** lfunorderzero: Warning: lfuninit: insufficient initialization.
@@ -302,6 +326,7 @@
 25 (lfunlambda): 2*x^-1 + O(x^0)
 25 (lfunderivlambda): 4.0000000000000000000000000000000000000*x^-3 + O(x^0)
 25 (lfuncheckfeq): -127
+25 (lfuncheckfeq(lfundual)): -127
 25 (lfunhardy): -2.5469113466196770062933385045593301523
 25 (lfunorderzero): 0
 25 (lfuntheta): 0.030046893520745694160538411115727227082
@@ -314,6 +339,7 @@
 26 (lfunlambda): 4.8989794855663561963945681494117827839*x^-1 + O(x^0)
 26 (lfunderivlambda): 9.7979589711327123927891362988235655679*x^-3 + O(x^0)
 26 (lfuncheckfeq): -126
+26 (lfuncheckfeq(lfundual)): -126
 26 (lfunhardy): -0.36466842410981896568466950765779840745 + 1.38307889933471
 27324520029043839243324*I
 26 (lfunorderzero): 0
@@ -327,6 +353,7 @@
 27 (lfunlambda): 2.2168928091162464996705548722606546078
 27 (lfunderivlambda): 1.8835751442729164002985938822801004139
 27 (lfuncheckfeq): -127
+27 (lfuncheckfeq(lfundual)): -127
 27 (lfunhardy): 7.1739599307895241834661105153799234554
 27 (lfunorderzero): 0
 27 (lfuntheta): 0.33740734290941194013785615355015968564
@@ -342,6 +369,7 @@
 28 (lfunlambda): 2.2168928091162464996705548722606546078
 28 (lfunderivlambda): 1.8835751442729164002985938822801004139
 28 (lfuncheckfeq): -127
+28 (lfuncheckfeq(lfundual)): -127
 28 (lfunhardy): 7.1739599307895241834661105153799234554
 28 (lfunorderzero): 0
 28 (lfuntheta): 0.33740734290941194013785615355015968564
@@ -357,6 +385,7 @@
 29 (lfunlambda): 2.5158152993104480556746720628152471027
 29 (lfunderivlambda): 2.1502397959728439200455523877452901447
 29 (lfuncheckfeq): -126
+29 (lfuncheckfeq(lfundual)): -127
 29 (lfunhardy): 2.8845771022027583283290641748300159470 + 3.3202488042440264
 704057081842186911048*I
 29 (lfunorderzero): 0
@@ -370,6 +399,7 @@
 30 (lfunlambda): 2.8450867706015258379523360911003279317
 30 (lfunderivlambda): 5.7204259750670336214223157097792822772
 30 (lfuncheckfeq): -127
+30 (lfuncheckfeq(lfundual)): -127
 30 (lfunhardy): 4.8275994526484248940007934411523183648
 30 (lfunorderzero): 0
 30 (lfuntheta): 0.25552955884387935277949460024860170847
@@ -382,6 +412,7 @@
 31 (lfunlambda): 0.19557068134325499033294643094375330160
 31 (lfunderivlambda): 0.074923901241117305308856177568943698543
 31 (lfuncheckfeq): -127
+31 (lfuncheckfeq(lfundual)): -127
 31 (lfunhardy): 0.86445110850417919069718227732914939116
 31 (lfunorderzero): 0
 31 (lfuntheta): 0.033524995531193573780800227953209178608
@@ -404,6 +435,7 @@
 32 (lfunderivlambda): 35.119341345499317617173671937045221290 - 7.6130893486
 359329343104104880084980135*I
 32 (lfuncheckfeq): -127
+32 (lfuncheckfeq(lfundual)): -127
 32 (lfunhardy): -6.0689473021581631216399042218295179710
 32 (lfunorderzero): 0
 32 (lfuntheta): 0.79138040414598215782025151996013400677 - 0.693572792187828
@@ -417,6 +449,7 @@
 33 (lfunlambda): 2.0636065064337882642106195341697561190
 33 (lfunderivlambda): 1.5118482678149543000643643698970410347
 33 (lfuncheckfeq): -125
+33 (lfuncheckfeq(lfundual)): -125
 33 (lfunhardy): 2.5141116494240547692059934356337208455
 33 (lfunorderzero): 0
 33 (lfuntheta): 0.23289067751256198570325301650715050858
@@ -429,6 +462,7 @@
 34 (lfunlambda): 24.473226847609759135198967167899023747
 34 (lfunderivlambda): 30.738683436715312670539707545652132287
 34 (lfuncheckfeq): -127
+34 (lfuncheckfeq(lfundual)): -127
 34 (lfunhardy): 2.7897642304056560145420743528588027342
 34 (lfunorderzero): 0
 34 (lfuntheta): 1.7720013953042806303430908084396944474
@@ -446,6 +480,7 @@
 35 (lfunderivlambda): 0.52081003542624615533195834024597669200 - 0.029375838
 961809596501348902603430873705*I
 35 (lfuncheckfeq): -126
+35 (lfuncheckfeq(lfundual)): -127
 35 (lfunhardy): 3.3945174411529004850500531435606288502
 35 (lfunorderzero): 0
 35 (lfuntheta): 0.33142868713174619542675563090594092429 - 0.001318047923982
@@ -469,6 +504,7 @@
 36 (lfunderivlambda): [1.8835751442729164002985938822801004139, 1.6813033526
 691147654492798337764777073]
 36 (lfuncheckfeq): -127
+36 (lfuncheckfeq(lfundual)): -127
 36 (lfunhardy): [7.1739599307895241834661105153799234554, 3.6230834364100961
 464915708492723350363]
 36 (lfunorderzero): error("incorrect type in lfunorderzero [vector-valued] (
@@ -505,6 +541,7 @@ t_VEC).")
 951898171871017932754996114827*I, 1.1988007101249872464418248949851604475 - 
 0.036891804725574719370444706322397354993*I]
 37 (lfuncheckfeq): -125
+37 (lfuncheckfeq(lfundual)): -125
 37 (lfunhardy): [3.1567083262256877198860463836387331346, 1.7473101037515900
 279009592791717467746]
 37 (lfunorderzero): error("incorrect type in lfunorderzero [vector-valued] (
@@ -541,6 +578,7 @@ t_VEC).")
 38 (lfunlambda): 1.0000000000000000000000000000000000000*x^-1 + O(x^0)
 38 (lfunderivlambda): 2.0000000000000000000000000000000000000*x^-3 + O(x^0)
 38 (lfuncheckfeq): -126
+38 (lfuncheckfeq(lfundual)): -126
 38 (lfunhardy): -0.97015131557059479318247051718915637096
 38 (lfunorderzero): 0
 38 (lfuntheta): 0.0037418601725423530816919183393838490569
@@ -553,6 +591,7 @@ t_VEC).")
 39 (lfunlambda): 0.13675913322137212158503856141594714368
 39 (lfunderivlambda): 0.17013636341135599774663836705641169284
 39 (lfuncheckfeq): -126
+39 (lfuncheckfeq(lfundual)): -126
 39 (lfunhardy): -1.2423170473203508839664397185125926678
 39 (lfunorderzero): 0
 39 (lfuntheta): 0.0037418601725423530816919183393838490569
@@ -571,8 +610,9 @@ t_VEC).")
 40 (lfunderivlambda): 0.61064372945147934336973567662158940718*x^-3 - 3.0747
 443460097747453020429310868696302 + O(x)
 40 (lfuncheckfeq): -123
+40 (lfuncheckfeq(lfundual)): -124
 40 (lfunhardy): 0.92406364860702089035467361162064280827
 40 (lfunorderzero): 0
 40 (lfuntheta): 0.00071568351627807464942396068632337922743
 40 (lfunan): [1, 3, 0, 7, 12, 0, 0, 15, 10, 36]
-Total time spent: 5518
+Total time spent: 4343
